--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "homepage": "https://github.com/oopsno/cramer#readme",
   "devDependencies": {
     "chai": "^3.5.0",
-    "coffee-script": "^1.10.0",
     "grunt": "^0.4.5",
-    "grunt-contrib-coffee": "^1.0.0",
+    "grunt-mocha-istanbul": "^3.0.1",
     "grunt-mocha-test": "^0.12.7",
+    "istanbul": "^0.4.2",
     "mocha": "^2.4.5"
   },
   "dependencies": {
